Fixed jumping div

--- a/frontend/css/viewer.css
+++ b/frontend/css/viewer.css
@@ -42,8 +42,6 @@ div {
 
 #data {
     min-height: 258px;
-    max-height: 258px;
-    height: 258px;
     padding-top: 0px;
     margin-top: 20px;
     margin-left: 5px;
